--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -1,42 +1,20 @@
 /*font-family: "Trebuchet MS",helvetica,arial,sans-serif;*/
 body {
-	font-family: garamond,times,serif;
+	/*font-family: garamond,times,serif;*/
 	font-size: 16px;
 	color: #ffff99;
 	background-color: #000;
+  border: deeppink 1px solid;
 }
 
-h3 {
-	font-size: 1.3em;
-  margin-top: 2em;
-  font-weight: bold;
-
+ul, header, footer {
+  border: deeppink 1px solid;
 }
 
-img {
-	border-radius: 6px;
-}
-
-/*navigation bar elements*/
-.headerBar {
-	background-image: url("../images/background.jpg");
-	padding: 30px;
-	border-radius: 20px;
-}
-
-.nameBar h1 {
-	font-size: 52px;
-	font-weight: bold;
-}
-
-.navBar {
-	margin-left: 30px;
-}
-
-.navBar li {
-	display: inline;
-	margin-right: 20px;
-	font-size: 20px;
+/*heading elements*/
+h1 {
+  font-size: 42px;
+  font-family: "Josefin Sans", helvetica, arial, sans-serif;
 }
 
 /*codeBit grid*/
@@ -59,6 +37,10 @@ img {
 .codeBit .desc {
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.centeringContainer {
+	text-align: center;
 }
 /* bubble wrap */
 #bubbleWrap .makeBubbles div {
@@ -134,6 +116,11 @@ img {
 	width: auto;
 	text-align: center;
 	cursor: none;
+	display: inline-block;
+}
+
+#magnifiedImage {
+	border-radius: 0;
 }
 
 #magnifyingGlass {
@@ -141,10 +128,21 @@ img {
 	position: absolute;
 	width: 200px;
 	height: 200px;
+
 	border-radius: 100%;
 	background-repeat: no-repeat;
-	margin-top: -100px;
+	background-image: url("../../Program_Blog/Focus_In/worldsfair11-hr.jpg");
+
 	/*background: url(../../Program_Blog/Focus_In/worldsfair11-hr.jpg) 20px 20px;*/
 }
+
+#magnifyingGlass img {
+
+}
+
+div#magnifyingArea:hover #magnifyingGlass {
+	display: block;
+}
+
 
 
