--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -48,7 +48,8 @@ h3 {
   height: 100px;
   display: flex;
   align-items: center;
-  padding: 0 10%;
+  padding-left:10%;
+  max-width: 980px;
 }
 .nameBar h1 {
   display: inline-block;
@@ -105,9 +106,10 @@ h3 {
 /*Personal intro elements*/
 .selfIntro {
   background-color: rgba(0, 0, 0, .5);
-  width: 980px;
+  max-width: 980px;
   box-sizing: border-box;
   border-radius: 10px;
+  border: 2px solid black;
   padding: 25px;
   font-size: 20px;
   margin-left: 10%;
