codebits have max-width

--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -131,7 +131,7 @@ button.actionIntro {
   border-radius: 10px;
   background-color: rgba(0, 0, 0, .5);
   height: 150px;
-  width: 980px;
+  max-width: 980px;
   border: 2px solid black;
   box-sizing: border-box;
   display: flex;
