--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  src: url(../resources/fonts/gotham-book.otf);
+  font-family: Gotham;
+}
+
 body {
   box-sizing: border-box;
 	color: #fffde7;
@@ -6,7 +11,8 @@ body {
   background: -o-linear-gradient(right, #4527A0, #0085B2); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(right, #4527A0, #0085B2); /* For Firefox 3.6 to 15 */
   background: linear-gradient(to right, #4527A0 , #0085B2); /* Standard syntax */
-  font-family: "Josefin Sans", helvetica, arial, sans-serif;
+  font-family: "Lato", helvetica, arial, sans-serif;
+  font-weight: 300;
 /*TODO: do I need these now that I have viewport set?*/
   /*width: 100%;*/
   /*background-repeat: no-repeat;*/
@@ -20,10 +26,6 @@ footer {
 a, a:visited {
   text-decoration: underline;
   color: #fffde7;
-}
-
-button a {
-  text-decoration: none;
 }
 
 h1 {
@@ -68,7 +70,6 @@ h3 {
 .socialLinksTop {
   display: inline-block;
   margin-left: auto;
-
 }
 
 .socialLinksTop li {
@@ -89,7 +90,6 @@ h3 {
 
 .navBar {
   background-color: rgba(0, 0, 0, .5);
-  height: 40px;
   margin-bottom: 25px;
 }
 
@@ -97,6 +97,7 @@ h3 {
   height: 100%;
   font-size: 24px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -125,13 +126,18 @@ h3 {
   margin-bottom: 25px;
 }
 
-button.actionIntro {
-  background-color: transparent;
+.actionIntro {
+  width: 100%;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.actionIntro a {
+  display: inline-block;
+  width: 133px;
   border: 2px solid #FFFDE7;
   border-radius: 10px;
   padding: 10px 25px;
-  margin: 25px 400px;
-  width: 180px;
   font-weight: 700;
 }
 
