--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -74,22 +74,13 @@ main {
 
 /*heading elements*/
 .name-bar {
-  height: 100px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
 
-.name-bar h1 {
-  display: inline-block;
-}
-
-.show-condensed {
-  display: none;
-}
-
-.hide-condensed {
-  display: none;
+.name-bar h1, .name-bar input {
+  height: 100px;
 }
 
 header .social-links {
@@ -236,7 +227,6 @@ footer .social-links li:last-child {
 	position: absolute;
 	width: 200px;
 	height: 200px;
-
 	border-radius: 100%;
 	background-repeat: no-repeat;
 	background-image: url("../../Program_Blog/Focus_In/worldsfair11-hr.jpg");
@@ -251,50 +241,65 @@ div#magnifyingArea:hover #magnifyingGlass {
     font-size: 16px;
   }
 
+  #social-link-toggle {
+    position:absolute;
+    appearance:none;
+    cursor:pointer;
+    left:-100%;
+    top:-100%;
+  }
 
-  /* social-links logic */
-  .show-condensed, .hide-condensed {
-    background: rgba(0,0,0,.5);
-    height: 20px;
-    width: 40px;
-    text-align: center;
-    border-radius: 5px;
+  .name-bar h1,
+  #social-link-toggle + label {
+    height: 70px;
+    line-height: 70px;
+  }
+
+
+  #social-link-toggle + label {
+    cursor: pointer;
     margin-left: auto;
-    margin-right: 20px;
-  }
-
-  .show-condensed {
-    display: inline-block;
-  }
-
-  .hide-condensed {
-    display: none;
-  }
-
-  .show-condensed:hover ~ .hide-condensed {
-    display: inline-block;
-  }
-
-  .show-condensed:hover  {
-    display: none;
-  }
-
-
-  .show-condensed:hover ~ header .social-links {
-    border: solid deeppink 2px;
-    display: block;
-    max-width: 560px;
-    width: 100%;
+    margin-right: 10px;
     text-align: center;
+    -webkit-font-smoothing: antialiased;
+    transition: all 500ms ease;
   }
 
+  #social-link-toggle + label .show-condensed {
+    display: inline-block;
+    line-height: 30px;
+  }
 
+  #social-link-toggle + label .hide-condensed {
+    display: none
+  }
 
-  header .social-links {
+  #social-link-toggle:checked + label .show-condensed {
+    display: none
+  }
+
+  #social-link-toggle:checked + label .hide-condensed {
+    display: inline-block;
+    line-height: 30px;
+  }
+
+  .social-links {
+    transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+  }
+
+  #social-link-toggle:checked ~ .social-links {
     display: none;
   }
 
-  nav {
+  .show-condensed, .hide-condensed {
+    background: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    width: 40px;
+    height: 30px;
+  }
+
+  nav,
+  header .social-links {
     margin-bottom: 10px;
   }
 
@@ -324,6 +329,5 @@ div#magnifyingArea:hover #magnifyingGlass {
     margin-right: 10px;
   }
 }
-
 
 
