--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -255,7 +255,6 @@ div#magnifyingArea:hover #magnifyingGlass {
     line-height: 70px;
   }
 
-
   #social-link-toggle + label {
     cursor: pointer;
     margin-left: auto;
@@ -284,11 +283,16 @@ div#magnifyingArea:hover #magnifyingGlass {
   }
 
   .social-links {
-    transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+    visibility: hidden;
+    height: 0;
+    opacity: 0;
+    transition: height 0s, opacity 0.5s linear;
   }
 
   #social-link-toggle:checked ~ .social-links {
-    display: none;
+    visibility: visible;
+    opacity: 1;
+    height: 100%;
   }
 
   .show-condensed, .hide-condensed {
@@ -296,6 +300,7 @@ div#magnifyingArea:hover #magnifyingGlass {
     border-radius: 10px;
     width: 40px;
     height: 30px;
+    -webkit-transition-timing-function: ease-out;
   }
 
   nav,
