--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -81,6 +81,12 @@ main {
 
 .name-bar h1, .name-bar input {
   height: 100px;
+  line-height: 100px;
+}
+
+#social-link-toggle,
+#social-link-toggle + label {
+  display: none;
 }
 
 header .social-links {
@@ -256,12 +262,12 @@ div#magnifyingArea:hover #magnifyingGlass {
   }
 
   #social-link-toggle + label {
+    display: inline-block;
     cursor: pointer;
     margin-left: auto;
     margin-right: 10px;
     text-align: center;
     -webkit-font-smoothing: antialiased;
-    transition: all 500ms ease;
   }
 
   #social-link-toggle + label .show-condensed {
@@ -283,16 +289,11 @@ div#magnifyingArea:hover #magnifyingGlass {
   }
 
   .social-links {
-    visibility: hidden;
-    height: 0;
-    opacity: 0;
-    transition: height 0s, opacity 0.5s linear;
+    display: none;
   }
 
   #social-link-toggle:checked ~ .social-links {
-    visibility: visible;
-    opacity: 1;
-    height: 100%;
+    display: inline-block;
   }
 
   .show-condensed, .hide-condensed {
