--- a/public/Index/css/style.css
+++ b/public/Index/css/style.css
@@ -52,7 +52,6 @@ p {
 }
 
 h1,
-nav ul li:first-child,
 section,
 figure {
   margin-left: 10px;
@@ -129,6 +128,7 @@ nav ul {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  padding-left: 10px;
 }
 
 nav li {
@@ -245,7 +245,7 @@ div#magnifyingArea:hover #magnifyingGlass {
 
 @media screen and (max-width: 560px) {
   body {
-    font-size: 16px;
+    font-size: 14px;
   }
 
   .name-bar h1,
